@startuml

title __RECYCLEVIEW's Class Diagram__\n

  namespace com.itbird.design {
    namespace strategy {
      namespace demo.recycleview {
        class com.itbird.design.strategy.demo.recycleview.GridLayoutManager {
        }
      }
    }
  }
  

  namespace com.itbird.design {
    namespace strategy {
      namespace demo.recycleview {
        class com.itbird.design.strategy.demo.recycleview.LinearLayoutManager {
            + generateDefaultLayoutParams()
        }
      }
    }
  }
  

  namespace com.itbird.design {
    namespace strategy {
      namespace demo.recycleview {
        class com.itbird.design.strategy.demo.recycleview.RecyclerView {
            + RecyclerView()
            + RecyclerView()
            + RecyclerView()
            + RecyclerView()
            + setLayoutManager()
            # onLayout()
        }
      }
    }
  }
  

  namespace com.itbird.design {
    namespace strategy {
      namespace demo.recycleview {
        abstract class com.itbird.design.strategy.demo.recycleview.RecyclerView.LayoutManager {
            {abstract} + generateDefaultLayoutParams()
        }
      }
    }
  }
  

  com.itbird.design.strategy.demo.recycleview.GridLayoutManager -up-|> com.itbird.design.strategy.demo.recycleview.LinearLayoutManager
  com.itbird.design.strategy.demo.recycleview.LinearLayoutManager -up-|> com.itbird.design.strategy.demo.recycleview.RecyclerView.LayoutManager
  com.itbird.design.strategy.demo.recycleview.RecyclerView -up-|> android.view.ViewGroup
  com.itbird.design.strategy.demo.recycleview.RecyclerView +-down- com.itbird.design.strategy.demo.recycleview.RecyclerView.LayoutManager
  com.itbird.design.strategy.demo.recycleview.RecyclerView.LayoutManager o-- com.itbird.design.strategy.demo.recycleview.RecyclerView : mRecyclerView


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
